kubesphere/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubesphere-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ks-apiserver
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ks-apiserver
                port:
                  number: 80
